Okay, I lied; another more or less major commit. Added images: 	apk.png 	playstore.png 	fdroid.png
Added APK downloads to:
	Firefox
	Tomdroid

Added target="_blank" to external links for all categories and in a few
other places.

Added .floss, .proprietary, or .download classes to all categories.

Removed "Messenger Play" from proprietary Messenger list because I
couldn't find it anywhere.

Removed "No iOS Version yet though." from surespot as it is irrelevant
on a list for Android apps.

Capitalized a bunch of <img> alts.

Changed alt for Yahoo Messenger from "yim" to "Yahoo Messenger."

And probably a bunch of minor changes that I forgot to write here.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 html{
     font-size: 16px;
 }
+#logo{
+    height: 4rem;
+    width: 4rem;
+    /*vertical-align: middle;*/
+}
 #forkMe{
     position: absolute;
     top: 0rem;
@@ -13,6 +18,9 @@ nav li{
 td.proprietary{
     width: 10%;
 }
+td.notes{
+    width: 25%;
+}
 ul.proprietary{
     list-style-type: none;
 /*    text-align: center; Check this later. */
@@ -24,4 +32,8 @@ img.proprietary{
 img.floss{
     width: 3rem;
     height: 3rem;
+}
+img.download{
+    width: 2.5rem;
+    height: 2.5rem;
 }
