--- a/style.css
+++ b/style.css
@@ -308,3 +308,22 @@ svg:not(:root){
     overflow: hidden;
 }
 
+#qrBackground{
+    width: 100%;
+    height: 100%;
+    background-color: #333333;
+    z-index: 8;
+    display: none;
+    opacity: 0.7;
+    position: fixed;
+}
+
+#qrCode{
+    max-width: 100%;
+    opacity: 1;
+    z-index: 9;
+    display: none;
+    position: fixed;
+    top: 12rem;
+    right: 36rem;
+}
