--- a/style.css
+++ b/style.css
@@ -312,18 +312,35 @@ svg:not(:root){
     width: 100%;
     height: 100%;
     background-color: #333333;
-    z-index: 8;
+    z-index: 7;
     display: none;
     opacity: 0.7;
     position: fixed;
 }
 
-#qrCode{
-    max-width: 100%;
+.qrCode{
     opacity: 1;
-    z-index: 9;
     display: none;
     position: fixed;
-    top: 12rem;
-    right: 36rem;
+    top: 50%;
+    right: 50%;
+    margin-right: -12rem;
+    background-color: #ffffff;
+}
+div.qrCode{
+    width: 24rem;
+    min-height: 10rem;
+    z-index: 8;
+}
+p.qrCode{
+    width: 14rem;
+    background-color: blue;
+    position: relative; /* foo */
+    overflow: hidden;
+}
+img.qrCode{
+    max-width: 100%;
+    border: 1px solid #333333;
+    z-index: 9;
+    margin-right: -11rem;
 }
