--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html{
     font-size: 16px;
     overflow-y: scroll;
     min-height: 100%; /**/
-} html, body, h1, h2, h3, hr, p, img, table, td, th, tr, ul.proprietary{
+} html, body, h1, h2, h3, h4, hr, p, img, table, td, th, tr, ul.proprietary{
     margin: 0rem;
     padding: 0rem;
     border: 0rem;
@@ -67,6 +67,12 @@ h3{
     font-size: 2rem;
     font-weight: 400;
 }
+
+h4{
+    font-size: 0.6rem;
+    font-weight: 400;
+}
+
 hr{
     border-top: 1px solid rgba(0,0,0,0.2); /* #dddddd in default.css *//* This seems way unnecessary. */
     border-bottom: 1px solid rgba(255,255,255,0.2);
@@ -308,39 +314,50 @@ svg:not(:root){
     overflow: hidden;
 }
 
-#qrBackground{
+#qrFade{
+    background-color: #333333;
     width: 100%;
     height: 100%;
-    background-color: #333333;
     z-index: 7;
-    display: none;
     opacity: 0.7;
+    display: none;
     position: fixed;
 }
 
-.qrCode{
+#qrBackground{
+    background-color: #ffffff;
+    width: 24.25rem;
+    min-height: 10.25rem;
+    z-index: 8;
     opacity: 1;
     display: none;
     position: fixed;
     top: 50%;
     right: 50%;
+    padding: 0rem;
+    margin-top: -5rem;
     margin-right: -12rem;
-    background-color: #ffffff;
 }
-div.qrCode{
-    width: 24rem;
-    min-height: 10rem;
-    z-index: 8;
+
+#qrText{
+    /*background-color: #eeeeee;*/
+    text-align: center;
+    word-wrap: break-word;
+    width: 13rem;
+    min-height: 7.75rem;
+    display: inline-block;
+    position: relative;
+    top: +1rem;
+    left: +1rem;
+    margin: 0.25rem 0rem 0rem 0.25rem;
+    padding: 0.25rem;
 }
-p.qrCode{
-    width: 14rem;
-    background-color: blue;
-    position: relative; /* foo */
-    overflow: hidden;
-}
-img.qrCode{
-    max-width: 100%;
-    border: 1px solid #333333;
-    z-index: 9;
-    margin-right: -11rem;
+
+#qrCode{
+    max-width: 8.25rem;
+    vertical-align: top;
+    display: inline-block;
+    position: relative;
+    top: +1rem;
+    right: -1.75rem;
 }
