--- a/style.css
+++ b/style.css
@@ -326,8 +326,8 @@ svg:not(:root){
 
 #qrBackground{
     background-color: #ffffff;
-    width: 24.25rem;
-    min-height: 10.25rem;
+    /*min-width: 24.25rem;
+    min-height: 10.25rem;*/
     z-index: 8;
     opacity: 1;
     display: none;
@@ -341,23 +341,26 @@ svg:not(:root){
 
 #qrText{
     /*background-color: #eeeeee;*/
-    text-align: center;
     word-wrap: break-word;
-    width: 13rem;
-    min-height: 7.75rem;
     display: inline-block;
-    position: relative;
-    top: +1rem;
-    left: +1rem;
-    margin: 0.25rem 0rem 0rem 0.25rem;
-    padding: 0.25rem;
+    text-align: center;
+/*    min-width: 13rem;
+    min-height: 7.75rem;
+    /*position: relative;
+    /*top: +1rem;
+    bottom: +1rem;
+    left: +1rem*
+    margin: 0.25rem 0rem 0rem 0.25rem;*/
+    margin: 1rem 0.5rem 1rem 1rem;
 }
 
 #qrCode{
-    max-width: 8.25rem;
+    min-width: 8.25rem; /* Check this. */
     vertical-align: top;
     display: inline-block;
-    position: relative;
-    top: +1rem;
-    right: -1.75rem;
+    /*position: relative;
+    /*top: +1rem;
+    /*right: -1.75rem;*/
+    /*right: +1rem;*/
+    margin: 1rem 1rem 1rem 0.5rem;
 }
