Added newlines to css/style.css.

--- a/css/style.css
+++ b/css/style.css
@@ -4,34 +4,44 @@
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
+
 [hidden]{ /* Find out what this does. */
     display: none;
 }
+
 html{
     font-size: 16px;
     overflow-y: scroll;
     min-height: 100%; /**/
-} html, body, h1, h2, h3, h4, hr, p, img, table, td, th, tr, ul.proprietary{
+}
+
+ html, body, h1, h2, h3, h4, hr, p, img, table, td, th, tr, ul.proprietary{
     margin: 0rem;
     padding: 0rem;
     border: 0rem;
     outline: 0rem;
 }
+
 main div, div div{
     padding: 0rem;
 }
+
 header, main, div, footer{
     padding: 1.25rem;
 }
+
 header, nav, main, footer{
     display: block;
 }
+
 header > :last-child, nav > :last-child, main > :last-child, footer > :last-child{
     margin-bottom: 0rem;
 }
+
 h1, h2, h3, p, table{
     margin-bottom: 0.5rem; /* Fix this shit. */
 }
+
 body{
     line-height: 1.5; /* 1.3 in default.css */ /* Change this to rems or something. */
     letter-spacing: 0.01rem;
@@ -40,29 +50,36 @@ body{
     font-family: "Open Sans", sans-serif; /* Used to be Georgia, Times New, and serif, but that looked like shit. */
     font-weight: 300;
 }
+
 footer{
     background-color: #eeeeee;
     border-top: 0.0625rem solid #cccccc;
     font-size: 0.9rem;
 }
+
 footer a, a.friends{
     text-decoration: none;
 }
+
 h1{
     font-size: 3.125em; /* Maybe change to a friendlier number. */
     font-weight: 400; /* 300 in default.css */
     letter-spacing: 0.01rem;
 }
+
 h1 a, h2 a{ /* Probably unnecessary. */
     text-decoration: none;
 }
+
 h1 a:hover, h2 a:hover{ /* Probably unnecessary. */
     text-decoration: underline;
 }
+
 h2{
     font-size: 2.5rem;
     font-weight: 400; /* 300 in default.css */
 }
+
 h3{
     font-size: 2rem;
     font-weight: 400;
@@ -80,17 +97,21 @@ hr{
     margin : 0.5rem 0rem;
     height: 0.0625rem;
 }
+
 strong{
     font-weight: 700; /* bold in default.css */
 }
+
 em{ /* i in default.css */
     font-style: italic;
 }
+
 img{
     color: #ff0000;
     font-style: italic;
     max-width: 100%; /* Seems unnecessary. */
 }
+
 table{
     background-color: #fafafa;
     border-collapse: collapse;
@@ -99,12 +120,15 @@ table{
     font-size: 1rem;
     width: 100%;
 }
+
 tr{ /* table tr in default.css */
     border-top: 0.0625rem solid #cccccc;
 }
+
 tr:nth-child(2n){ /* table tr:nth-child(2n) in default.css */
     background: #eeeeee;
 }
+
 th, td{ /* table th and table td in default.css */
     border-left: 0.0625rem solid #cccccc;
     padding: 0.25rem;
@@ -112,48 +136,61 @@ th, td{ /* table th and table td in default.css */
     font-size: 1rem;
     font-weight; 300;
 }
+
 p,li,li a{ /* li p was here too, but it seemed unnecessary. li a might be. */
     /*font-size: 1rem;*/
     font-weight: 300;
 }
+
 header{
     background-color: #ffffff;
     border-bottom: 0.0625rem solid #dddddd;
     font-size: 1.1rem;
     text-shadow: 0rem 0.0625rem 0.0625rem rgba(255,255,255,0.2);
 }
+
 header h1{
     font-weight: 600; /* Might be unnecessary. */
 }
+
 header > p:nth-child(3){
     margin-top: 1.5rem;
 }
+
 header > :last-child{
     margin-bottom: 0rem; /* Yeah, you know by now. */
 }
+
 ul{
     margin: 0rem 0rem 0.5rem; /* This seems really weird. */
     padding: 0rem 0rem 0rem 1.5rem;
 }
+
 a{
     color: #d48371; /* #3b8bba in default.css */
 }
+
 a:hover, a:active{
     color: #bf523a; /* #22516d in default.css */
 }
+
 a:focus, a:active{
     outline: 0rem;
 }
+
 a:visited{
     color: #843928; /* #163446 in default.css *//* Consider not having this. I think it looks weird. */
 }
+
 ul>li:last-child, .media .media-Text>:last-child, .emph-Block>:last-child{ /* This also seems unoptimized. */
     margin-bottom: 0rem;
 }
+
 nav{
     background-color: rgba(255,255,255,0.3);
     border: 0.0625rem solid rgba(100,100,100,0.2);
 }
+
 nav ul{
     font-size: 0rem;
     list-style: none;
@@ -162,71 +199,89 @@ nav ul{
     padding: 0rem; /* 0.25rem in brass-min.css */
     *zoom: 1; /* Does not seem to do jack shit. */
 }
+
 nav ul:before, nav ul:after, .media:before, .media:after{
     content: ""; /* Check these. */
     display: table;
 }
+
 nav ul:after, .media:after{
     clear: both;
 }
+
 nav li{
     display: inline-block;
     font-size: 1.125rem;
     margin: 0rem; /* Probably unnecessary. */
 }
+
 nav li:last-child a{
     border-right: none;
 }
+
 nav a{
     display: inline-block;
     padding: 0.25rem 0.5rem; /* 0.25rem 0.75rem in default.css */
     text-decoration: underline; /* Probably unnecessary but explicit > implicit? */
 }
+
 nav > a:last-child{
     border-right: none;
 }
+
 nav a:hover{
     text-decoration: none;
 }
+
 /*#logo{
     max-height: 4rem;
     max-width: 4rem;
 }*/
+
 #forkMe{
     position: absolute;
     top: 0rem;
     right: 0rem;
     border: 0rem;
 }
+
 td.proprietary{
     width: 10%;
     font-size: 0.9rem;
 }
+
 td.notes{ /* Don't think I need td here. */
     width: 25%;
 }
+
 ul.proprietary{
     list-style-type: none;
     text-align: center; /* Check this later. */
 }
+
 ul.proprietary > li{
     margin-bottom: 2rem;
 }
+
 img.proprietary{
     height: 1.5rem; /*2rem?*/
     width: 1.5rem;
 }
+
 img.floss{
     width: 3rem;
     height: 3rem;
 }
+
 img.download{
     width: 2.5rem;
     height: 2.5rem;
 }
+
 img.friends{
     max-height: 3.75rem;
 }
+
 .pic-Rounded{
     display: inline-block;
     overflow: hidden;
@@ -253,20 +308,24 @@ img.friends{
     * -webkit-border-radius: 0.25rem;
     * */
 }
+
 .pic-Rounded img{
     display: block; /* Might be unnecessary. Aren't all imgs blocks? */
 }
+
 .media{
     margin-bottom: 1rem;
     position: relative;
     z-index: 2; /* What is this? */
     *zoom: 1; /* Doesn't seem to do anything. */
 }
+
 .media .media-Object{
     float: left;
     margin: 0rem 1rem 0.5rem 0rem;
     max-width: 30%;
 }
+
 .emph-Block{
     background-color: #fafafa;
     background-clip: padding-box;
@@ -281,13 +340,16 @@ img.friends{
     min-height: 3.125rem;
     padding: 1rem;
 }
+
 .eps{
     font-size: 1.25rem;
     font-weight: 300;
 }
+
 .txt-Center{
     text-align: center;
 }
+
 .topLink{
     float: right;
     font-size: 1rem;
@@ -296,20 +358,24 @@ img.friends{
     position: relative;
     top: 3rem;
 }
+
 .topLink,.topLink:hover,.topLink:visited,.topLink:focus{
     color: #cccccc;
     text-decoration: none;
 }
+
 ::selection{
     background-color: #54a4a3;
     color: #eeeeee;
     text-shadow: none;
 }
+
 ::-moz-selection{
     background-color: #54a4a3;
     color: #eeeeee;
     text-shadow: none;
 }
+
 svg:not(:root){
     overflow: hidden;
 }
@@ -348,3 +414,4 @@ svg:not(:root){
     height: 8rem;
     display: inline-block;
 }
+
